[workspace]
members = [
  "./lib",
  "./examples/globe/canvas",
  "./examples/globe/rotating_50m",
  "./examples/globe/drag_and_zoom",
  "./examples/globe/svg",
  "./examples/projections",
  "./examples/ring",
]

[workspace.package]
authors = ["martin <martinfrances107@hotmail.com>"]
categories = ["graphics"]
edition = "2021"
keywords = ["graphics", "d3-geo"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/martinfrances107/rust_d3_geo"
version = "0.1.5"
# Version 1.65 is required as this package makes use of "Generic Associated Types".
rust-version = "1.65"

[workspace.dependencies]
d3_geo_rs = { path = "../../lib" }
geo = "~0.23"
geo-types = "~0.7"
getrandom = { version = "~0.2", features = ["js"] }
gloo-utils = "~0.1"
js-sys = "~0.3"
futures = "~0.3"
rand = { version = "~0.8" }
rust_topojson_client = { git = "https://github.com/martinfrances107/rust_topojson_client.git", branch = "main" }
topojson = "~0.5"
wasm-bindgen = "~0.2"
wasm-bindgen-test = "~0.3"
wasm-bindgen-futures = "~0.4"
web-sys = "~0.3"

[profile.release]
codegen-units = 1
debug = true
lto = true
panic = "abort"
