[workspace]
resolver = "2"
members = [
  "./lib",
  "./examples/globe/canvas",
  "./examples/globe/rotating_50m",
  "./examples/globe/drag_and_zoom",
  "./examples/globe/svg",
  "./examples/globe/albers_usa_svg",
  "./examples/projections",
  "./examples/ring",
  "./profile_target/albers_svg",
  './profile_target/simple_svg',
]

[workspace.package]
authors = ["martin <martinfrances107@hotmail.com>"]
categories = ["graphics", "Mathematics"]
edition = "2021"
keywords = ["diagram", "graphics"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/martinfrances107/rust_d3_geo"
version = "2.0.14"
# Version 1.65 is required as this package makes use of "Generic Associated Types".
rust-version = "1.65"

[workspace.dependencies]
d3_geo_rs = { path = "../../lib" }
geo = "~0.28"
geo-types = "~0.7"
getrandom = { version = "~0.2", features = ["js"] }
gloo-utils = "~0.2"
js-sys = "~0.3"
serde_json = "~1"
futures = "~0.3"
rand = { version = "~0.8" }
rust_topojson_client = { git = "https://github.com/martinfrances107/rust_topojson_client.git", branch = "main" }
topojson = "~0.5"
wasm-bindgen = "~0.2"
wasm-bindgen-test = "~0.3"
wasm-bindgen-futures = "~0.4"
web-sys = "~0.3"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.dev]
debug = true
