[package]
authors = ["martin <martinfrances107@hotmail.com>"]
categories = ["profile"]
description = "A flamegraph target."
keywords = ["flamegraph"]
name = "albers_issue"
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = "https://github.com/martinfrances107/rust_d3_geo.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d3_geo_rs = { path = "../lib" }
geo = { workspace = true }
lazy_static = "~1"
geo-types = "~0.7"
num-traits = "~0.2"
rust_topojson_client = { workspace = true }
topojson = "~0.5"
serde_json = "1"
