[package]
name = "clip_ops_macro_derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
# syn: Pareses rust code from a string into an ast.
syn ="1.0.74"
# quote: Converts ast into string.
quote="1.0.9"
