[package]
name = "rust_d3_geo"
version = "0.1.0"
authors = ["martin frances <martinfrances107@hotmail.com>"]
edition = "2021"
readme = "README.md"
description = "A port of D3/d3-geo"
repository = "https://github.com/martinfrances107/rust_d3_geo"

[dependencies]
approx = "~0.5"
derivative = "~2"
num-traits = "~0.2"
geo = { workspace = true }
delaunator = { git = "https://github.com/mourner/delaunator-rs.git" }
rust_d3_array = { git = "https://github.com/martinfrances107/rust_d3_array.git" }
rust_topojson_client = { workspace = true }
serde_json = "~1.0"
futures = { workspace = true }

[dev-dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }
gloo-utils = { workspace = true }
geo = { workspace = true }
pretty_assertions = "~1"
lazy_static = "~1"
regex = "~1"
topojson = { workspace = true }
criterion = "~0.4"

[dependencies.web-sys]
workspace = true
features = ["CanvasRenderingContext2d"]

[[bench]]
name = "graticule"
harness = false

[[bench]]
name = "rings"
harness = false
