[package]
authors = ["martin <martinfrances107@hotmail.com>"]
categories = ["graphics"]
edition = "2021"
description = "A port of D3/d3-geo"
keywords = ["graphics", "d3-geo"]
name = "d3_geo_rs"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/martinfrances107/rust_d3_geo.git"
version = { workspace = true }

[dependencies]
approx = "~0.5"
derivative = "~2"
num-traits = "~0.2"
geo = { workspace = true }
geo-types = { workspace = true }
serde_json = "~1"

[dev-dependencies]
futures = { workspace = true }
js-sys = { workspace = true }
rand = { workspace = true }
rust_topojson_client = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
wasm-bindgen-futures = { workspace = true }
gloo-utils = { workspace = true }
pretty_assertions = "~1"
lazy_static = "~1"
regex = "~1"
topojson = { workspace = true }
criterion = { version = "0.4", features = ["html_reports"] }

[dependencies.web-sys]
workspace = true
features = [
  "Attr",
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "Event",
  "Headers",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "Path2d",
  "Performance",
  "PerformanceTiming",
  "PerformanceMeasure",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "SvgsvgElement",
  "SvgAnimatedLength",
  "SvgLength",
  "SvgPathElement",
  "Text",
  "Window",
]

[[bench]]
name = "graticule"
harness = false

[[bench]]
name = "rings"
harness = false

[[example]]
name = "globe_canvas"
path = "../examples/globe/canvas/src/lib.rs"
crate-type = ["cdylib"]

[[example]]
name = "globe_drag_and_zoom"
path = "../examples/globe/drag_and_zoom/src/lib.rs"
crate-type = ["cdylib"]

[[example]]
name = "rotating_50m"
path = "../examples/globe/rotating_50m/src/lib.rs"
crate-type = ["cdylib"]

[[example]]
name = "globe_svg"
path = "../examples/globe/svg/src/lib.rs"
crate-type = ["cdylib"]

[[example]]
name = "projection"
path = "../examples/projections/src/lib.rs"
crate-type = ["cdylib"]

[[example]]
name = "rings"
path = "../examples/ring/src/lib.rs"
crate-type = ["cdylib"]
