[package]
name = "rust_d3_geo_graticule"
description="rust_d3_geo_voronoi benchmark wasm app"
license = "MIT"
version = "0.1.0"
authors = ["martin <martinfrances107@hotmail.com>"]
edition = "2018"
[lib]
crate-type = ["cdylib"]

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
rust_d3_geo = {path="../../lib"}
geo={git = "https://github.com/martinfrances107/geo.git", branch="cyclic_match" }
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.78"
getrandom = { version = "0.2.3", features = ["js"] }
rand = { version = "0.8.4"}
js-sys = "0.3.55"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.5", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
#[target."cfg(debug_assertions)".dependencies]
#console_error_panic_hook = "0.1.5"


# These crates are used for running unit tests.
[dev-dependencies]
futures = "0.3.17"
wasm-bindgen-test = "0.3.28"
wasm-bindgen-futures = "0.4.28"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = [
    "Attr",
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Performance",
    "PerformanceTiming",
    "PerformanceMeasure",
    "Text",
    "Window"
]
