[package]
name = "rust_d3_geo_example_graticule"
description = "rust_d3_geo wasm app"
license = "MIT"
version = "0.1.0"
authors = ["martin <martinfrances107@hotmail.com>"]
edition = "2021"
[lib]
crate-type = ["cdylib"]

[dependencies]
rust_d3_geo = { path = "../../lib" }
geo = "~0.23"
getrandom = { version = "~0.2", features = ["js"] }

# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "~0.2"
rand = { version = "~0.8" }
js-sys = "~0.3"
wasm-bindgen-test = "~0.3"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "~0.3"
features = [
    "Attr",
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Performance",
    "PerformanceTiming",
    "PerformanceMeasure",
    "SvgsvgElement",
    "SvgAnimatedLength",
    "SvgLength",
    "SvgPathElement",
    "Text",
    "Window",
]
