[package]
name = "multi_threaded"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
d3_geo_rs = { path = "../../lib", default-features = false }
num-traits = "0.2"
geo-types = "0.7"
