[package]
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
description = "A example app from the rust_d3_geo package. Code examples are provided so one can compare code to display a globe in all availble projections."
license = "MIT"
keywords = { workspace = true }
name = "rust_d3_geo_example_projection"
readme = { workspace = true }
repository = "https://github.com/martinfrances107/rust_d3_geo_voronoi.git"
version = { workspace = true }


[lib]
crate-type = ["cdylib"]

[dependencies]
geo = { workspace = true }
geo-types = { workspace = true }
gloo-utils = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
futures = { workspace = true }
js-sys = { workspace = true }
rand = { workspace = true }
rust_d3_geo = { path = "../../lib" }
rust_topojson_client = { workspace = true }
topojson = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-test = { workspace = true }
wasm-bindgen-futures = { workspace = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
workspace = true
features = [
    "Attr",
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "Headers",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Performance",
    "PerformanceTiming",
    "PerformanceMeasure",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Text",
    "Window",
]
