[package]
authors = { workspace = true }
edition = { workspace = true }
description = "A example app from the rust_d3_geo package. Code examples are provided to display the rings using orthographic and sterographic projection."
# license = { workspace = true }
license = "MIT"
name = "rust_d3_geo_example_ring"
readme = { workspace = true }
#repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
geo = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
rand = { workspace = true }
rust_d3_geo = { path = "../../lib" }
wasm-bindgen-test = { workspace = true }
wasm-bindgen = { workspace = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
workspace = true
features = [
    "Attr",
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Performance",
    "PerformanceTiming",
    "PerformanceMeasure",
    "SvgsvgElement",
    "SvgAnimatedLength",
    "SvgLength",
    "SvgPathElement",
    "Text",
    "Window",
]
