[package]
authors = ["martin <martinfrances107@hotmail.com>"]
categories = ["graphics"]
edition = "2021"
description = "A example app from the rust_d3_geo package. Code examples are provided to display the rings using orthographic and sterographic projection."
# license = { workspace = true }
keywords = ["graphics", "d3-geo"]
license = "MIT"
name = "rust_d3_geo_example_ring"
readme = "README.md"
repository = "https://github.com/martinfrances107/rust_d3_geo_voronoi.git"
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
d3_geo_rs = { path = "../../lib" }
geo = { workspace = true }
geo-types = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
rand = { workspace = true }
wasm-bindgen-test = { workspace = true }
wasm-bindgen = { workspace = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
workspace = true
features = [
  "Attr",
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "Performance",
  "PerformanceTiming",
  "PerformanceMeasure",
  "SvgsvgElement",
  "SvgAnimatedLength",
  "SvgLength",
  "SvgPathElement",
  "Text",
  "Window",
]
