[package]
authors = { workspace = true }
categories = ["graphics"]
edition = { workspace = true }
description = "A example app from the rust_d3_geo package. Code examples are provided to display the rings using orthographic and sterographic projection."
# license = { workspace = true }
keywords = ["graphics", "d3-geo"]
license = { workspace = true }
name = "rust_d3_geo_example_ring"
readme = "README.md"
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]
test=false

[dependencies]
# Remove web_sys as dependency .. we are just calling into the SVG portion
# of the library ( web-sys is included in the root package
d3_geo_rs = { path = "../../lib", default-features = false}
geo = { workspace = true }
geo-types = { workspace = true }
wasm-bindgen-test = { workspace = true }
wasm-bindgen = { workspace = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
workspace = true
features = [
  "Attr",
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "SvgsvgElement",
  "SvgAnimatedLength",
  "SvgLength",
  "SvgPathElement",
  "Text",
  "Window",
]
