[package]
authors = ["martin <martinfrances107@hotmail.com>"]
categories = ["profile"]
description = "A flamegraph target."
keywords = ["flamegraph"]
name = "albers_svg"
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = "https://github.com/martinfrances107/rust_d3_geo.git"

[[bin]]
name = "albers_svg"
test = false
bench = false

[dependencies]
# Remove web_sys as dependency .. we are just calling into the SVG portion
# of the library ( web-sys is included in the root package
d3_geo_rs = { path = "../../lib" , default-features = false}
geo = { workspace = true }
rust_topojson_client = { workspace = true }
topojson = { workspace = true }
serde_json = { workspace = true }
