[package]
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
description = "A example app from the rust_d3_geo package. The app is an example of code that display a globe using a HTML CANVAS element."
keywords = { workspace = true }
name = "rust_d3_geo_example_canvas"
license = "MIT"
readme = { workspace = true }
repository = "https://github.com/martinfrances107/rust_d3_geo_voronoi.git"
version = { workspace = true }

[lib]
crate-type = ["cdylib"]


[dependencies]
geo = { workspace = true }
geo-types = { workspace = true }
gloo-utils = { workspace = true }
js-sys = { workspace = true }
rust_d3_geo = { path = "../../../lib" }
rust_topojson_client = { workspace = true }
topojson = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
workspace = true
features = [
    "Attr",
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "Headers",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Performance",
    "PerformanceTiming",
    "PerformanceMeasure",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Text",
    "Window",
]
