[package]
name = "rust_d3_geo_example_globe_canvas_rotating_50m"
description = "rust_d3_geo benchmark wasm app"
license = "MIT"
version = "0.1.0"
authors = ["martin <martinfrances107@hotmail.com>"]
edition = "2021"
[lib]
crate-type = ["cdylib"]


[dependencies]
futures-util = "0.3.25"
js-sys = { workspace = true }
geo = { workspace = true }
futures = "0.3.25"
gloo-utils = { workspace = true }
gloo-timers = { version = "0.2.4", features = ["futures"] }
rust_d3_geo = { path = "../../../lib" }
rust_topojson_client = { workspace = true }
topojson = { workspace = true }
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-test = { workspace = true }
wasm-bindgen-futures = { workspace = true }
# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
workspace = true
features = [
    "Attr",
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "Headers",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Performance",
    "PerformanceTiming",
    "PerformanceMeasure",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Text",
    "Window",
]
