[package]
authors = ["martin <martinfrances107@hotmail.com>"]
categories = ["graphics"]
description = "A example app from the rust_d3_geo package. It shows how rust can interact with the browsers timer API."
edition = "2021"
# license = { workspace = true }
license = "MIT"
keywords = ["graphics", "d3-geo"]
name = "rust_d3_geo_example_globe_drag_and_zoom"
readme = "README.md"
repository = "https://github.com/martinfrances107/rust_d3_geo_voronoi.git"
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
d3_geo_rs = { path = "../../../lib" }
js-sys = { workspace = true }
geo = { workspace = true }
gloo-utils = { workspace = true }
rust_topojson_client = { workspace = true }
topojson = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = "~0.4"

[dependencies.web-sys]
workspace = true
features = [
  "Attr",
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "Event",
  "Headers",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Text",
  "Window",
]
