[package]
authors = ["martin <martinfrances107@hotmail.com>"]
categories = ["graphics"]
description = "A example app from the rust_d3_geo package. It shows how rust can interact with the browsers timer API."
edition = "2021"
# license = { workspace = true }
license = "MIT"
keywords = ["graphics", "d3-geo"]
name = "rust_d3_geo_example_globe_drag_and_zoom"
readme = "README.md"
repository = "https://github.com/martinfrances107/rust_d3_geo.git"
version = { workspace = true }

[features]
default = ['console_error_panic_hook']
console_error_panic_hook=[]

[lib]
crate-type = ["cdylib"]
test=false

[dependencies]
d3_geo_rs = { path = "../../../lib" }
js-sys = { workspace = true }
geo = { workspace = true }
gloo-utils = { workspace = true }
rust_topojson_client = { workspace = true }
topojson = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
  "Attr",
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "Event",
  "Headers",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Text",
  "Window",
]
