[package]
authors = ["martin <martinfrances107@hotmail.com>"]
categories = ["graphics"]
description = "A example app from the rust_d3_geo package. It shows how rust can interact with the browsers timer API."
edition = "2021"
# license = { workspace = true }
keywords = ["graphics", "d3-geo"]
license = "MIT"
name = "rust_d3_geo_example_globe_rotating_50m"
readme = "README.md"
repository = "https://github.com/martinfrances107/rust_d3_geo.git"
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
d3_geo_rs = { path = "../../../lib" }
js-sys = { workspace = true }
geo = { workspace = true }
geo-types = { workspace = true }
gloo-utils = { workspace = true }
rust_topojson_client = { workspace = true }
topojson = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
  "Attr",
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "Event",
  "Headers",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Text",
  "Window",
]
