[package]

authors = { workspace = true }
edition = { workspace = true }
description = "A example app from the rust_d3_geo package. The app is an example of code that manipulates SVG elements to display a globe."
name = "rust_d3_geo_example_svg"
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }


[lib]
crate-type = ["cdylib"]

[dependencies]
geo = { workspace = true, features = ["use-serde"] }
gloo-utils = { workspace = true }
js-sys = { workspace = true }
rust_d3_geo = { path = "../../../lib" }
rust_topojson_client = { workspace = true }
topojson = { workspace = true }
wasm-bindgen-test = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
workspace = true
features = [
    "console",
    "Attr",
    "Document",
    "Element",
    "Event",
    "Headers",
    "EventTarget",
    "SvgsvgElement",
    "SvgAnimatedLength",
    "SvgLength",
    "SvgPathElement",
    "HtmlElement",
    "HtmlCollection",
    "HtmlInputElement",
    "Node",
    "Performance",
    "PerformanceTiming",
    "PerformanceMeasure",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Text",
    "Window",
]
